--- a/src/main/resources/templates/html2.html
+++ b/src/main/resources/templates/html2.html
@@ -1167,78 +1167,9 @@
                     <img th:src="${painting.imageUrl}" alt="5Terre" width="600" height="400">
                 </a>
 
-                <div  class="desc">Draw by <span th:text="${painting.nickname}"></span><a th:href="@{/second/like(key=${painting.key})}" class="badge badge-secondary"> <span th:text="${painting.like}"></span> Likes</a> <a th:href="@{/second/dislike(key=${painting.key})}" class="badge badge-danger"> <span th:text="${painting.dislike}"></span> Dislikes</a> </div>
+                <div >Draw by <span th:text="${painting.nickname}"></span> <a th:href="@{/second/like(key=${painting.key})}" class="badge badge-secondary"> <span th:text="${painting.like}"></span> Likes</a> <a th:href="@{/second/dislike(key=${painting.key})}" class="badge badge-danger"> <span th:text="${painting.dislike}"></span> Dislikes</a> </div>
             </div>
 
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1000-outputs.png">
-                    <img src="images\testing-1000-outputs.png" alt="5Terre" width="600" height="400">
-                </a>
-                <div class="desc">114 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1001-outputs.png">
-                    <img src="images\testing-1001-outputs.png" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc">99 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1002-outputs.png">
-                    <img src="images\testing-1002-outputs.png" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">68 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1003-outputs.png">
-                    <img src="images\testing-1003-outputs.png" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">60 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1004-outputs.png">
-                    <img src="images\testing-1004-outputs.png" alt="5Terre" width="600" height="400">
-                </a>
-                <div class="desc">49 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1005-outputs.png">
-                    <img src="images\testing-1005-outputs.png" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc">47 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1006-outputs.png">
-                    <img src="images\testing-1006-outputs.png" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">42 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1007-outputs.png">
-                    <img src="images\testing-1007-outputs.png" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">41 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1008-outputs.png">
-                    <img src="images\testing-1008-outputs.png" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">37 likes</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="images\testing-1009-outputs.png">
-                    <img src="images\testing-1009-outputs.png" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">33 likes</div>
-            </div>
 
         </div>
         <!-- Service Owl Carousel section
