--- a/src/main/resources/templates/html2.html
+++ b/src/main/resources/templates/html2.html
@@ -1161,6 +1161,7 @@
 <section id="testimonial" class="parallax-section">
     <div class="container">
         <div class="center">
+            <h2> Hottest Pokemon</h2>
 
             <div th:each="painting: ${list}">
                 <a target="_blank" href="images\testing-1000-outputs.png">
