--- a/src/main/resources/templates/html2.html
+++ b/src/main/resources/templates/html2.html
@@ -135,7 +135,7 @@
             create_editor({
                 name: "drawkemon",
                 // weights_url: "/models/pokemon_model_full_20.bin",
-                weights_url: "/models/pokemon_model_full_20.bin",
+                weights_url: "/models/pokemon_model_0.bin",
                 mode: "line",
                 clear: "#FFFFFF",
                 colors: {
